# test-task

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  coverage.info
cmake/: build_settings.cmake  codecov_settings.cmake
src/: logger.c  logger.h
tests/: CMakeLists.txt
tests/tests_src/: default_error.c  default_log.c  logging_error.c  set_logging_handler.c
